--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,8 +4,7 @@
   "version": "0.1.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
-  "scripts": {
-  }
+  "scripts": {},
   "devDependencies": {
     "typescript": "^5.0.0"
   }
